k8s-manifests/base/ai-dmsp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-dmsp-api-service
  annotations:
    cloud.google.com/backend-config: '{"default": "$(INGRESS_BACKEND_CONFIG_NAME)"}'
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ai-dmsp-api
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ai-dmsp-react-service
  annotations:
    cloud.google.com/backend-config: '{"default": "$(INGRESS_BACKEND_CONFIG_NAME)"}'
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ai-dmsp-react
  ports:
    - port: 8081
      targetPort: 80
