k8s-manifests/base/ai-dmsp/np.allow-http-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ai-dmsp-api
      app.kubernetes.io/component: web-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 3001
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-react-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ai-dmsp-react
      app.kubernetes.io/component: web-react
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
